	Added new attributes dialog for xhtmlxtras plugin. Based on contribution by Ryan Demmer.
	Fixed issue where focus wasn't returned to editor after using a inlinepopup. Contributed by Andy Skelton.
	Fixed issue where fullscreen.htm file used the _dev version of the JavaScript.
	Fixed bug where embed elements was converted into ibed elements.
Version 2.0.9 (2007-01-09)
	Added support for fullscreen new window mode since the other method was problematic for some.
	Added new hide_selects_on_submit option. Enables the possibility to enable/disable disabling of TinyMCE select elements.
	Added new removeInstance callback for plugins and also a new remove_instance_callback option.
	Added warning if flash and media plugin is used at the same time. Flash plugin should be replaced with media plugin.
	Fixed so that fullscreen can be used even if placed in absolute positioned divs with borders etc.
	Fixed so that contextmenu on named anchors doesn't display the link/unlink items.
	Fixed so that wrap in source editor dialog works in Opera.
	Fixed so that single quotes/&#39; is only applied to text nodes not attributes.
	Fixed so that the emotions dialog is a little wider to avoid the FF bug with statusbar content alignment.
	Fixed issue where TinyMCE wasn't restoring scroll position after fullscreen mode switch.
	Fixed some HTML issues in style plugin dialog. Contributed by Michael Keck.
	Fixed bug where color selection menu was visible for instances that got removed.
	Fixed bug where it wasn't possible to remove block formatting with format select box.
	Fixed bug with xhtmlxtras plugin not working when convert_fonts_to_spans option enabled.
	Fixed bug where element path elements wasn't entity encoded properly.
	Fixed bug where IE 7 produced a invalid attribute exception for some URLs.
	Fixed bug where the fix_table_elements option moved tables out of divs and not just P and H1-6 elements.
	Fixed bug where drop menu for spellchecker didn't work in IE.